update auto reconnect for mqtt, signalr

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 #Cloud generic infomation
 SERVER_HOST = https://iot-dev.truesight.asia
+SERVER_TEST = https://localhost:5001/chathub
 
 #SignalR connection option
 SIGNALR_SERVER_URL = 
