--- a/.env
+++ b/.env
@@ -19,3 +19,6 @@ MQTT_QOS = 0
 MQTT_KEEPALIVE = 60
 MQTT_PUB_TOPIC = pub_topic
 MQTT_SUB_TOPIC = test
+
+#Sqlite connection option
+DB_NAME = Test.db
