update get token, http seervices

--- a/.env
+++ b/.env
@@ -2,15 +2,15 @@
 SERVER_HOST = https://iot-dev.truesight.asia
 
 #SignalR connection option
-SIGNALR_SERVER_URL = 
+SIGNALR_SERVER_URL = /rpc/iot-ebe/signalr/sync
 SERVER_TEST = https://localhost:5001/chathub
 
 #Server connection option
 REFRESH_TOKEN_URL = /rpc/iot-ebe/account/login
 TOKEN_URL = /rpc/iot-ebe/account/renew-token
-USERNAME = Mm
-PASSWORD = Mm
-DEVICENAME = Test
+USER = Mm
+PASS = Mm
+DEVICENAME = device_test
 
 #Mqtt connection option
 MQTT_HOST = broker.mqttdashboard.com
